# koharu

./: .editorconfig  .oxfmtrc.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  environment.koharu-build.yml  package.json
.github/: labeler.yml
.github/workflows/: build.yml  labeler.yml  lint.yml  pr.yml  publish.yml  release.yml  test.yml
docs/: zensical.ja-JP.toml  zensical.toml  zensical.zh-CN.toml
docs/designs/: koharu-v2-scene-graph-proposal.md
docs/en-US/: index.md
docs/en-US/how-to/: index.md  runtime-and-model-downloads.md  troubleshooting.md
docs/ja-JP/: index.md
docs/ja-JP/how-to/: index.md  runtime-and-model-downloads.md  troubleshooting.md
docs/zh-CN/: index.md
docs/zh-CN/how-to/: index.md  runtime-and-model-downloads.md  troubleshooting.md
e2e/: 20-page-reorder.spec.ts
e2e/helpers/: app.ts  pipeline.ts  selectors.ts
koharu-app/: Cargo.toml
koharu-app/src/: engine.rs  storage.rs
koharu-core/src/: lib.rs  protocol.rs
koharu-llm/src/: glm_ocr.rs  lib.rs
koharu-ml/: build.rs
koharu-rpc/src/: api.rs
koharu-runtime/src/: archive.rs  runtime.rs  zluda.rs
koharu/src/: sentry.rs
scripts/: dev.ts
scripts/setup/: bootstrap-linux-build.sh  install-linux-deps.sh  setup-conda-env.sh
ui/: .oxlintrc.json  openapi.json  oxlintrc.json  package.json  types.d.ts
ui/app/: globals.css  layout.tsx  providers.tsx
ui/app/(app)/: layout.tsx  page.tsx
ui/components/: ActivityBubble.tsx  AppErrorBoundary.tsx  AppInitializationSkeleton.tsx  Canvas.tsx  Image.tsx  MenuBar.tsx  Navigator.tsx  PageManagerDialog.tsx  Panels.tsx  SettingsDialog.tsx  Updater.tsx
ui/components/canvas/: CanvasToolbar.tsx  StatusBar.tsx  TextBlockLayer.tsx  ToolRail.tsx  Workspace.tsx  zoomGestures.ts
ui/components/panels/: LayersPanel.tsx  RenderControlsPanel.tsx  TextBlocksPanel.tsx
ui/components/ui/: accordion.tsx  alert-dialog.tsx  button.tsx  color-picker.tsx  context-menu.tsx  dialog.tsx  draft-textarea.tsx  font-select.tsx  input.tsx  label.tsx  menubar.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
ui/hooks/: useBlobData.ts  useBlockContextMenu.ts  useBlockDrafting.ts  useBrushCursor.ts  useBrushLayerDisplay.ts  useCanvasDrawing.ts  useCanvasZoom.ts  useKeyboardShortcuts.ts  useMaskDrawing.ts  usePointerToDocument.ts  useRenderBrushDrawing.ts  useTextBlocks.ts
ui/lib/: backend.ts  errors.ts  i18n.ts  llmTargets.ts  shortcutUtils.ts  util.ts
ui/lib/api/: fetch.ts
ui/lib/api/blobs/: blobs.ts
ui/lib/api/documents/: documents.ts
ui/lib/api/downloads/: downloads.ts
ui/lib/api/exports/: exports.ts
ui/lib/api/jobs/: jobs.ts
ui/lib/api/llm/: llm.ts
ui/lib/api/processing/: processing.ts
ui/lib/api/regions/: regions.ts
ui/lib/api/schemas/: documentSummary.ts  index.ts  llmStateStatus.ts  reorderRequest.ts  transferStatus.ts
ui/lib/api/system/: system.ts
ui/lib/api/text-blocks/: text-blocks.ts
ui/lib/machines/: index.tsx  processingMachine.ts
ui/lib/stores/: editorUiStore.ts  preferencesStore.ts
ui/public/locales/en-US/: translation.json
ui/public/locales/es-ES/: translation.json
ui/public/locales/ja-JP/: translation.json
ui/public/locales/ko-KR/: translation.json
ui/public/locales/pt-BR/: translation.json
ui/public/locales/ru-RU/: translation.json
ui/public/locales/tr-TR/: translation.json
ui/public/locales/zh-CN/: translation.json
ui/public/locales/zh-TW/: translation.json
